--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Document</title>
 </head>
 <body>
-    <p>klk</p>
+    <div class="row">
+        <div class="column">
+          <img src="rock.jpg" alt="Rock" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="paper.jpg" alt="Paper" style="width:100%">
+        </div>
+        <div class="column">
+          <img src="scissors.jpg" alt="scissors" style="width:100%">
+        </div>
+      </div>
 </body>
 </html>
