--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Rock Paper Scissors</h1>
 
     <div class="rectangle"> <h2 style="color: black; text-align: center;">Start Game</h2>  </div>
-    <div class="textbox"><h1>Lets play</h1></div>
+    <div class="textbox"><span>Lets play</span></div>
 
     <div class="flex-container">
         <div class="column piedra">
